adding style and logo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git hub</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h3>gir hub</h3>
     <p>git hub course</p>
+    <img src="logo.png" alt="This is a logo">
 </body>
 </html>
