--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
     <h3>gir hub</h3>
     <p>git hub course</p>
     <img src="logo.png" alt="This is a logo">
+    <main>
+        <section>
+          <p>Because the basics are important!</p>
+          <p>
+            Learn more about Git in the
+            <a href="https://git-scm.com/book/en/v2">official docs</a> or
+            <a href="https://acad.link/git">our course</a>.
+          </p>
+        </section>
+      </main>
 </body>
 </html>
