--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             Learn more about Git in the
             <a href="https://git-scm.com/book/en/v2">official docs</a> or
             <a href="https://acad.link/git">our course</a>.
+            <p>feat section change</p>
           </p>
         </section>
       </main>
